Lead the README with what jonoffcpu is for, and run CI's JVM tests once
The README opened with a one-line description and 500 lines of theory,
kernel settings and Docker before the quick start. It never said why
someone would pick jonoffcpu, how it relates to async-profiler's own
lock profiling, or where the project is going, and it had drifted from
the code.

The README is now an overview of about 300 lines: what jonoffcpu is
(a toolset that runs async-profiler and extends it with kernel-measured
off-CPU profiling), its value in six points, how off-CPU profiling
complements async-profiler's lock, native-lock and wall-clock modes, a
quick start, a documentation index, the direction (automated
performance optimization and tuning, from its Apache Pulsar origin,
integrating with tools such as Jafar and jafar-perf-box), and the
pre-1.0 status. The details moved to docs/: off-CPU concepts, how it
works, host setup, capture configuration, analysis, AI agents and SQL,
and building and testing. The release tag and the Maven coordinates
that release.yml rewrites stay in the README.

Fixed while moving: the pre-1.0 compatibility notes ("earlier releases")
here and in OFFLINE.md, the --waiting-from and --hide-from defaults
(preset:*), file= in asyncProfilerOptions (optional, may be relative),
the agent keys the options table left out, the correlator's retention
figure (now OFFLINE.md's), export described three times, and a help
text that listed a "coarsen" step --on-limit degrade does not have.

DocumentationTest replaces the README check in CommandLineTest and runs
as readmeTest over the repository's Markdown, which a typed argument
provider declares as its inputs: the options tables and sections name
only correlator options with the parser's defaults, every correlator
command uses only its own subcommand's options, and every relative link
and anchor resolves.

CI ran :jonoffcpu-agent:check and :jonoffcpu-correlator:check in all
four architecture and C-library jobs, so the JV